link updates, formatting, header fixes

--- a/docs/use-the-network/community-projects.mdx
+++ b/docs/use-the-network/community-projects.mdx
@@ -14,7 +14,7 @@ Developers are using the Helium Network for hundreds of IoT and sensing applicat
 snapshot of what's being built. All these projects are hosted on the
 [Helium Hackster Community](https://www.hackster.io/helium).
 
-### Agricultural
+## Agricultural
 
 <iframe
   frameborder="0"
@@ -49,7 +49,7 @@ snapshot of what's being built. All these projects are hosted on the
 ></iframe>
 <div />
 
-### Dashboards
+## Dashboards
 
 <iframe
   frameborder="0"
@@ -68,7 +68,7 @@ snapshot of what's being built. All these projects are hosted on the
 ></iframe>
 <div />
 
-### Environmental
+## Environmental
 
 <iframe
   frameborder="0"
@@ -106,7 +106,7 @@ snapshot of what's being built. All these projects are hosted on the
   frameborder="0"
   height="400"
   scrolling="no"
-  src="https://www.hackster.io/dhairya-parikh/lora-powered-air-quality-monitoring-system-e96aa9/embed"
+  src="https://www.hackster.io/358708/lora-powered-air-quality-monitoring-system-e96aa9/embed"
   width="350"
 ></iframe>
 &nbsp;&nbsp;&nbsp;
@@ -119,7 +119,7 @@ snapshot of what's being built. All these projects are hosted on the
 ></iframe>
 <div />
 
-### Healthcare
+## Healthcare
 
 <iframe
   frameborder="0"
@@ -154,7 +154,7 @@ snapshot of what's being built. All these projects are hosted on the
 ></iframe>
 <div />
 
-### Industrial
+## Industrial
 
 <iframe
   frameborder="0"
@@ -168,7 +168,7 @@ snapshot of what's being built. All these projects are hosted on the
   frameborder="0"
   height="400"
   scrolling="no"
-  src="https://www.hackster.io/mohammedfulail/dam-monitoring-with-b-l072z-lorawan-d3c100/embed"
+  src="https://www.hackster.io/fudhail/dam-monitoring-with-b-l072z-lorawan-d3c100/embed"
   width="350"
 ></iframe>
 <div />
@@ -189,7 +189,7 @@ snapshot of what's being built. All these projects are hosted on the
 ></iframe>
 <div />
 
-### Security
+## Security
 
 <iframe
   frameborder="0"
@@ -199,7 +199,7 @@ snapshot of what's being built. All these projects are hosted on the
   width="350"
 ></iframe>
 
-### Tracking
+## Tracking
 
 <iframe
   frameborder="0"
@@ -213,7 +213,7 @@ snapshot of what's being built. All these projects are hosted on the
   frameborder="0"
   height="400"
   scrolling="no"
-  src="https://www.hackster.io/tkartcpr/explore-unlimited-tracker-for-the-explorers-394adf/embed"
+  src="https://www.hackster.io/Souravv/explore-unlimited-tracker-for-the-explorers-394adf/embed"
   width="350"
 ></iframe>
 <div />
@@ -249,7 +249,7 @@ snapshot of what's being built. All these projects are hosted on the
   width="350"
 ></iframe>
 
-### Utility
+## Utility
 
 <iframe
   frameborder="0"
@@ -282,6 +282,7 @@ snapshot of what's being built. All these projects are hosted on the
   src="https://www.hackster.io/hardshare/hardshare-56bdc9/embed"
   width="350"
 ></iframe>
+<div />
 <iframe
   frameborder="0"
   height="400"
