TODO notes added

--- a/docs/blockchain/blockchain-primitives.mdx
+++ b/docs/blockchain/blockchain-primitives.mdx
@@ -33,6 +33,9 @@ Helium blockchain API to access all blockchain transactions and metadata.
 
 ### Epochs
 
+<!--TODO: epoch timing changes?  -->
+<!--TODO: remove consensus group content  -->
+
 An `epoch` is the target time period for which a given group of Validators is elected to serve as
 the consensus group. The target time for an epoch is currently `30 blocks`, as defined in the
 `election_interval` chain variable. Approximately every 30 blocks mined marks the passing of an
@@ -42,6 +45,8 @@ conclusion of each epoch, the consensus group will distribute all the $HNT produ
 via the `rewards` transaction.
 
 ### Transactions
+
+<!--TODO: cleanup this list post migration  -->
 
 The Helium blockchain currently has 36 native transaction types. Some appear in nearly every block
 mined while others were created to be used only once and will never be heard from again.
@@ -130,6 +135,8 @@ Both the Helium Mobile Wallet and the CLI Wallet create and use keys based on th
 p-256 keys. And the Helium blockchain supports both key types.
 
 To learn more about existing wallet solutions, check out our [section on wallets](/wallets).
+
+<!--TODO: remove post migration  -->
 
 ### Validators
 
