--- a/docs/blockchain/blockchain.mdx
+++ b/docs/blockchain/blockchain.mdx
@@ -38,6 +38,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
   </div>
 </div>
 
+<!--TODO: post migration : update mining reward units  -->
+<!--TODO: post migration : add DNT Token pages  -->
+
 <div class="container" style={{ padding: 0 }}>
   <div class="row">
     <div class="col col--12">
