--- a/docs/blockchain/consensus-protocol.mdx
+++ b/docs/blockchain/consensus-protocol.mdx
@@ -60,6 +60,8 @@ achieve censorship-resistant transactions.
 - [HoneyBadger BFT (PDF)](https://eprint.iacr.org/2016/199.pdf)
 - [Introducing the Helium blockchain](https://blog.helium.com/introducing-the-helium-blockchain-dc2f8997083c)
 
+<!--TODO: post migration: remove concensus group documentation  -->
+
 ## The Consensus Group Election
 
 A new Consensus Group \(CG\) is elected once per epoch. Currently there are `43` members elected to
@@ -74,6 +76,8 @@ For a more complete overview of how Validators are elected to the consensus grou
 
 ## Rewarding Hotspots
 
+<!--TODO: update to rewards in DNT  -->
+
 At the end of each epoch, mining rewards are distributed by the consensus group to the wallet
 addresses that have earned them. Currently `65%` of all mining rewards go to the hotspot
 infrastructure \(with the remaining `35%` being distributed network investors\). A graphical
@@ -87,6 +91,8 @@ During the course of any epoch, Hotspots are rewarded for the following list of 
 
 During the course of any epoch, Validators are rewarded for the following list of activities per
 changes from [HIP 55](https://github.com/helium/HIP/blob/main/0055-validator-challenges.md):
+
+<!--TODO: post migration: remove consensus group content  -->
 
 - Serving as consensus group member
 
