--- a/docs/blockchain/helium-token.mdx
+++ b/docs/blockchain/helium-token.mdx
@@ -17,10 +17,16 @@ symbol is `HNT`. Prior to the launch of the Helium blockchain, there was no prem
 first `HNT` was produced on July 29th, 2019
 [as part of the block 93](https://explorer.helium.com/txns/sEP-cbb2tvSrfbBleT21yGDNM8FIjNr3UT3k3BeZELw).
 
-:::info For statistics on HNT,
+<!--TODO: post migration: point to pyth price feeds instead  -->
+
+:::info
+
+For statistics on HNT,
 [see the Market section on the Helium Explorer](https://explorer.helium.com/market).
 
 :::
+
+<!--TODO: rework for each DNT and HNT - HIP-51 content mostly  -->
 
 ## Helium Token Usage
 
@@ -34,11 +40,15 @@ ecosystem:
    transaction, [are used to pay transaction fees](/blockchain/transaction-fees) for wireless data
    transmissions on the network (in addition to things like adding Hotspots and sending).
 
+<!--TODO: integrate HIP-51 ocntent here  -->
+
 ## HNT Token Economic Concepts
 
 The Helium blockchain uses three distinct token economic concepts to ensure HNT supply is both
 plentiful for network needs but also relatively scarce, with a known maximum. Let's take a look at
 them in some detail.
+
+<!--TODO: max supplies for DNTs goes here.  -->
 
 ### Max Supply
 
@@ -119,6 +129,8 @@ times. So the actual maximum supply is `223,000,000` HNT.
 :::
 
 ### Data Credits and Burn-and-Mint Economics
+
+<!--TODO: notes on data credit costs varying within subDAOs  -->
 
 As noted above, **Data Credits** are a $USD-pegged utility token derived from HNT in a burn
 transaction and used to pay [all transaction fees](/blockchain/transaction-fees) on the Helium
