--- a/docs/blockchain/oracles.mdx
+++ b/docs/blockchain/oracles.mdx
@@ -6,6 +6,7 @@ sidebar_label: HNT Price Oracles
 description: HNT Price Oracles
 image: https://i.imgur.com/bWAbESE.png
 slug: /blockchain/oracles
+post-migration: archive, redirect to price oracle page in oracle section
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
