--- a/docs/blockchain/packet-purchasing.mdx
+++ b/docs/blockchain/packet-purchasing.mdx
@@ -9,6 +9,7 @@ slug: /blockchain/packet-purchasing
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
+<!--TODO: move this to use the network section?  -->
 
 <img className="docsheader" src={useBaseUrl('img/blockchain/packetpurchasing.png')} />
 
@@ -46,6 +47,8 @@ order. You can query the API for a list of existing OUIs using
 [the following endpoint](/api/blockchain/ouis#list-ouis).
 
 ## State Channels
+
+<!--TODO: move to separate pge  -->
 
 State channels are side-chains opened by OUI operators (any of the libp2p addresses registered to
 the OUI). With an
