--- a/docs/blockchain/proof-of-coverage.mdx
+++ b/docs/blockchain/proof-of-coverage.mdx
@@ -9,6 +9,7 @@ slug: /blockchain/proof-of-coverage
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
+<!--TODO: specify and merge content with subDAO PoC pages  -->
 
 <img className="docsheader" src={useBaseUrl('img/blockchain/proofofcoverage.png')} />
 
