--- a/docs/community-governance/community-voting.mdx
+++ b/docs/community-governance/community-voting.mdx
@@ -8,6 +8,8 @@ image: https://i.imgur.com/bWAbESE.png
 slug: /community-voting
 ---
 
+<!--TODO: update content for realms voting  -->
+
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # Voting on Helium
