--- a/docs/mine-hnt/understanding-hotspot-status.mdx
+++ b/docs/mine-hnt/understanding-hotspot-status.mdx
@@ -8,6 +8,8 @@ image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/understanding-hotspot-status
 ---
 
+<!--TODO: move this content to OG Hotspot page.  -->
+
 # Hotspot Status
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
