--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -6,6 +6,7 @@ sidebar_label: FAQs, Resources, And Providers
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/faqs-resources-providers
+post-migration: archive
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
