--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -6,6 +6,7 @@ sidebar_label: Deployment Guide - Mainnet
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/mainnet/deployment-guide
+post-migration: archive
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
