--- a/docs/mine-hnt/validators/mainnet/validators-release.mdx
+++ b/docs/mine-hnt/validators/mainnet/validators-release.mdx
@@ -6,6 +6,7 @@ sidebar_label: Validator Release
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/mainnet/validators-release
+post-migration: archive
 ---
 
 # Validator Releases
