--- a/docs/mine-hnt/validators/mainnet/wallet.mdx
+++ b/docs/mine-hnt/validators/mainnet/wallet.mdx
@@ -6,6 +6,7 @@ sidebar_label: Configure A Wallet
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/mainnet/wallet
+post-migration: archive
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
