--- a/docs/mine-hnt/validators/monitoring.mdx
+++ b/docs/mine-hnt/validators/monitoring.mdx
@@ -6,6 +6,7 @@ sidebar_label: Monitoring
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/monitoring
+post-migration: archive
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
