--- a/docs/mine-hnt/validators/penalties.mdx
+++ b/docs/mine-hnt/validators/penalties.mdx
@@ -6,6 +6,7 @@ sidebar_label: Penalties
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/penalties
+post-migration: archive
 ---
 
 # Validator Penalties and Impact on Rewards
