--- a/docs/mine-hnt/validators/requirements.mdx
+++ b/docs/mine-hnt/validators/requirements.mdx
@@ -6,6 +6,7 @@ sidebar_label: Technical Requirements
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/requirements
+post-migration: archive
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
