--- a/docs/mine-hnt/validators/troubleshooting.mdx
+++ b/docs/mine-hnt/validators/troubleshooting.mdx
@@ -6,6 +6,7 @@ sidebar_label: Troubleshooting
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/troubleshooting
+post-migration: archive
 ---
 
 **NOTE**: If you build the Validator from source, the paths below may be different for you. For the
