--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -6,6 +6,7 @@ sidebar_label: Validators And Voting Power
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/validators-and-voting-power
+post-migration: move content to governance
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
