--- a/docs/oracles/data-transfer-oracles.mdx
+++ b/docs/oracles/data-transfer-oracles.mdx
@@ -16,6 +16,8 @@ The documentation on Oracles and the upcoming Migration is under development and
 
 :::
 
+<!--TODO: remove warning banner post migration  -->
+
 Moving the entire data transfer logic off-chain to Oracles will increase scalability and reduce
 points of failure.
 
