--- a/docs/oracles/iot-proof-of-coverage-oracles.mdx
+++ b/docs/oracles/iot-proof-of-coverage-oracles.mdx
@@ -16,6 +16,8 @@ The documentation on Oracles and the upcoming Migration is under development and
 
 :::
 
+<!--TODO: remove warning banner post migration  -->
+
 <!--TODO: remove all of this, as it is covered in PoC documentation already.  -->
 
 On the Helium L1, Validators constructed Challenges and perform Validation of the Proof of Coverage
