--- a/docs/oracles/oracle-data.mdx
+++ b/docs/oracles/oracle-data.mdx
@@ -16,6 +16,8 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 :::
 
+<!--TODO: remove warning banner post migration  -->
+
 The Helium Network operates Oracles that perform various tasks backing Proof of Coverage and data
 transfer for the LoRaWAN (IoT), Mobile, and any future networks. These Oracles provide extensive
 logs for the purposes of analysis of the Helium subDAOs.
