--- a/docs/oracles/price-oracles.mdx
+++ b/docs/oracles/price-oracles.mdx
@@ -16,6 +16,8 @@ The documentation on Oracles and the upcoming Migration is under development and
 
 :::
 
+<!--TODO: remove warning banner post migration  -->
+
 On the Helium L1, the [Price Oracle](/blockchain/oracles) is the only existing Oracle on the Helium
 Network. It is required on-chain as the price of HNT is needed to calculate HNT to burn when minting
 Data Credits (DC).
