--- a/docs/oracles/rewards-oracles.mdx
+++ b/docs/oracles/rewards-oracles.mdx
@@ -16,6 +16,8 @@ The documentation on Oracles and the upcoming Migration is under development and
 
 :::
 
+<!--TODO: remove warning banner post migration  -->
+
 There are initially three Rewards Oracles, one for each subDAO (MOBILE and IOT) and one for HNT,
 which ingest the work of all of the above Oracles to determine the appropriate emissions for each
 subDAO.
