--- a/docs/mine-hnt/validators/testnet/design.mdx
+++ b/docs/mine-hnt/validators/testnet/design.mdx
@@ -6,6 +6,7 @@ sidebar_label: Design
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/testnet/design
+post-migration: archive
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
