--- a/docs/mine-hnt/validators/testnet/expectations.mdx
+++ b/docs/mine-hnt/validators/testnet/expectations.mdx
@@ -6,6 +6,7 @@ sidebar_label: Expectations
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/testnet/expectations
+post-migration: archive
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
