--- a/docs/mine-hnt/validators/testnet/test-cases.mdx
+++ b/docs/mine-hnt/validators/testnet/test-cases.mdx
@@ -6,6 +6,7 @@ sidebar_label: Test Cases
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/testnet/test-cases
+post-migration: archive
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
