--- a/docs/oracles/mobile-proof-of-coverage-oracles.mdx
+++ b/docs/oracles/mobile-proof-of-coverage-oracles.mdx
@@ -16,6 +16,8 @@ The documentation on Oracles and the upcoming Migration is under development and
 
 :::
 
+<!--TODO: remove warning banner post migration  -->
+
 As the MOBILE subDAO is still in its infancy, its
 [PoC model is relatively straightforward](/5g-on-helium/mobile-poc) and based on the following
 factors:
