--- a/docs/oracles/oracles.mdx
+++ b/docs/oracles/oracles.mdx
@@ -16,6 +16,8 @@ The documentation on Oracles and the upcoming Migration is under development and
 
 :::
 
+<!--TODO: remove warning banner post migration  -->
+
 The migration of the Helium L1 to the Solana L1 brings several changes to the setup of the Network
 and its associated subDAOs infrastructure. Chief among these changes is moving a lot of data that
 has previously been "on-chain" (namely PoC data) "off-chain".
