--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -12,33 +12,49 @@ hide_table_of_contents: true
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-<div class="container" style={{padding: 0}}>
-	<div class="row">
-	<div class="col col--12">
-		<img className="docsheader" style={{marginBottom: 50}} src={useBaseUrl("img/home/docsheader.png")} />
-	</div>
-		<div class="col col--6">
-			<h1 className="bigger">Get Started <br/>with Helium</h1>
-			<h2 className="subtitle">Build amazing connected solutions on the world’s largest decentralized wireless network.</h2>
-    	</div>
-    	<div class="col col--6">
-    		<a className="quicklink" href="/blockchain">Learn about the Helium Blockchain <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
-    			<a className="quicklink quicklinkblue" href="/mine-hnt">Learn about mining HNT <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
-    							<a className="quicklink quicklinkgreen" href="/use-the-network">Build Devices to use the Network <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
-    			<a className="quicklink quicklinkred" href="/community-governance">Submit a Helium Improvement Proposal (HIP) <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
-    	</div>
-    </div>
-
-</div>
-<div class="container" style={{padding: 0}}>
-<hr />
-</div>
-
 <div class="container" style={{ padding: 0 }}>
   <div class="row">
     <div class="col col--12">
-      <img className="homeicon" src={useBaseUrl('img/5g-on-helium/5gheader.png')} />
+      <img
+        className="docsheader"
+        style={{ marginBottom: 50 }}
+        src={useBaseUrl('img/home/docsheader.png')}
+      />
     </div>
+    <div class="col col--6">
+      <h1 className="bigger">
+        Get Started <br />
+        with Helium
+      </h1>
+      <h2 className="subtitle">
+        Build amazing connected solutions on the world’s largest decentralized wireless network.
+      </h2>
+    </div>
+    <div class="col col--6">
+      <a className="quicklink" href="/blockchain">
+        Learn about the Helium Blockchain{' '}
+        <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
+      </a>
+      <a className="quicklink quicklinkblue" href="/mine-hnt">
+        Learn about mining HNT{' '}
+        <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
+      </a>
+      <a className="quicklink quicklinkgreen" href="/use-the-network">
+        Build Devices to use the Network{' '}
+        <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
+      </a>
+      <a className="quicklink quicklinkred" href="/community-governance">
+        Submit a Helium Improvement Proposal (HIP){' '}
+        <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
+      </a>
+    </div>
+  </div>
+</div>
+<div class="container" style={{ padding: 0 }}>
+  <hr />
+</div>
+<div class="container" style={{ padding: 0 }}>
+  <div class="row">
     <div class="col col--6">
       <h1 className="bigger">Helium 5G</h1>
       <h2 className="subtitle">5G comes to the People's Network.</h2>
@@ -55,11 +71,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
     </div>
   </div>
 </div>
-
 <div class="container" style={{ padding: 0 }}>
   <hr />
 </div>
-
 <div class="container" style={{ padding: 0 }}>
   <div class="row">
     <div class="col col--12">
@@ -90,11 +104,10 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
     </div>
   </div>
 </div>
-
 <div class="container" style={{ padding: 0, paddingTop: 100 }}>
   <div class="row">
     <div class="col col--6" style={{ marginBottom: 100 }}>
-      <img className="homeicon" src={useBaseUrl('img/home/blockchainicon.png')} />
+      {/* <img className="homeicon" src={useBaseUrl('img/home/blockchainicon.png')} /> */}
       <h3>Helium Blockchain</h3>
       <p className="podtext">
         The Helium Blockchain is a new blockchain built from the ground up to incentivize the
@@ -124,7 +137,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       </a>
     </div>
     <div class="col col--6 blockblue" style={{ marginBottom: 100 }}>
-      <img className="homeicon" src={useBaseUrl('img/home/mineicon.png')} />
+      {/* <img className="homeicon" src={useBaseUrl('img/home/mineicon.png')} /> */}
       <h3>Mine $HNT</h3>
       <p className="podtext">
         Hotspots create The People’s Network, a long-range wireless coverage for very low power and
@@ -155,7 +168,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       </a>
     </div>
     <div class="col col--6 blockgreen" style={{ marginBottom: 100 }}>
-      <img className="homeicon" src={useBaseUrl('img/home/useicon.png')} />
+      {/* <img className="homeicon" src={useBaseUrl('img/home/useicon.png')} /> */}
       <h3>Use the Helium Network</h3>
       <p className="podtext">
         The Helium Ecosystem includes thousands of ready-to-use devices, powerful integrations, and
@@ -177,7 +190,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       </a>
     </div>
     <div class="col col--6 blockred" style={{ marginBottom: 100 }}>
-      <img className="homeicon" src={useBaseUrl('img/home/communityicon.png')} />
+      {/* <img className="homeicon" src={useBaseUrl('img/home/communityicon.png')} /> */}
       <h3>Community, Governance, & Open Source</h3>
       <p className="podtext">
         Helium’s decentralized ‘People’s Network’ relies on a community of supporters, developers
