Add rpc endpoint with todo.

--- a/docs/solana/migration/maker.mdx
+++ b/docs/solana/migration/maker.mdx
@@ -79,6 +79,8 @@ module.exports = (api) => {
 Apps must now be wrapped in a `<SolanaProvider>` and the `baseUrl` for `<OnboardingProvider>` has
 changed
 
+TODO - Add info solana rpc and how to obtain one
+
 ```tsx
 // src/App.tsx
 const { walletLinkToken } = useSelector((state: RootState) => state.app)
@@ -100,6 +102,7 @@ useEffect(() => {
 <SolanaProvider
    heliumWallet={heliumWallet}
    cluster="mainnet-beta"
+   rpcEndpoint="https://your-solana-rpc.com"
 >
   {/* //////////////////////////////////////////////////////////////
   Remove the /v2 from your onboarding url 👉👉👉👉👉👉👉👉👇
@@ -121,10 +124,11 @@ variables.
 // src/App.tsx
 <SolanaProvider
   heliumWallet={heliumWallet}
+  rpcEndpoint="https://your-devnet-solana-rpc.com"
   cluster="devnet"
   solanaStatusOverride="complete"
 >
-  <OnboardingProvider baseUrl="https://onboarding.oracle.test-helium.com/api">
+  <OnboardingProvider baseUrl="https://onboarding.web.test-helium.com/api">
 ```
 
 ---
@@ -275,7 +279,7 @@ const App = () => {
 ```
 
 Remove the ability for a new user to link to the Hotspot app. On the Welcome Screen you can now just
-link directly to the Helium Wallet app.
+link directly to the black Helium Wallet app.
 
 ```tsx
 // src/features/onboarding/welcome/WelcomeScreen.tsx
