--- a/docs/solana/migration/maker.mdx
+++ b/docs/solana/migration/maker.mdx
@@ -79,7 +79,15 @@ module.exports = (api) => {
 Apps must now be wrapped in a `<SolanaProvider>` and the `baseUrl` for `<OnboardingProvider>` has
 changed
 
-TODO - Add info solana rpc and how to obtain one
+A Solana Provider must be set with a Solana RPC. Because Helium makes use of Compressed NFTs, there are
+currently 3 RPC providers with support:
+  
+  * [GenesysGo](https://genesysgo.com/)
+  * [Helius](https://helius.xyz/)
+  * [Triton](https://triton.one)
+
+You can visit their websites and get set up with an RPC url.
+
 
 ```tsx
 // src/App.tsx
