Links to GitHub project.

--- a/docs/solana/migration/migration-status.mdx
+++ b/docs/solana/migration/migration-status.mdx
@@ -10,9 +10,10 @@ slug: /solana/migration/migration-status
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-The Solana Migration Status service can be leveraged in order to appropriately feature flag 
-attributes in an application. For example, this service can be used to disable transactions during 
-the migration or to point users to separate services as the migration completes.
+The Solana Migration Status service, [Solana Sentinel](https://github.com/helium/solana-sentinel),
+can be leveraged in order to appropriately feature flag attributes in an application. For example, 
+this service can be used to disable transactions during the migration or to point users to separate 
+services as the migration completes.
 
 ## Migration States
 
