Hotspot audit process

--- a/docs/hotspot-makers/compliance-commitee.mdx
+++ b/docs/hotspot-makers/compliance-commitee.mdx
@@ -10,7 +10,7 @@ slug: /hotspot-makers/compliance-committee
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-# Manufacturing Compliance Committee Charter
+## Charter
 
 - Quick Guide
   - The MCC was formed to set basic standards and verify compliance of the Hotspots being added to
@@ -22,6 +22,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
   - The MCC requires manufacturers to submit copies of their regulatory compliance reports as part
     of the final audit.
   - The MCC has the power to grant and revoke maker keys.
+
+---
 
 ## Purpose and Goals
 
