--- a/docs/hotspot-makers/hotspot-manufacturers.mdx
+++ b/docs/hotspot-makers/hotspot-manufacturers.mdx
@@ -1,14 +1,12 @@
 ---
 id: hotspot-manufacturers
-title: Approved Hotspot Manufacturers FAQ
-pagination_label: Approved Hotspot Manufacturers FAQ
-sidebar_label: Approved Hotspot Manufacturers
+title: Approved Hotspot Manufacturers
+pagination_label: Approved Hotspot Manufacturers
+sidebar_label: Approved Manufacturers
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /hotspot-makers/hotspot-manufacturers
 ---
-
-# FAQ - Approved Hotspot Manufacturers
 
 Nova Labs (formerly Helium Systems, Inc.) manufactured the first set of Hotspots on the Network.
 (These are often referred to as "OGs."). Nova Labs no longer manufacturers Hotspots, but there is
