minor clarification of intro
Co-Authored-By: Joey Hiller <1965053+jthiller@users.noreply.github.com>

--- a/docs/solana/migration/exchange.mdx
+++ b/docs/solana/migration/exchange.mdx
@@ -16,11 +16,10 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 :::
 
-The Helium Network is migrating to the Solana blockchain, and all Helium Network Tokens, HNT, IOT,
-and MOBILE, will be SPL tokens.
+The Helium Network is migrating to the Solana blockchain. All Helium Network Tokens (HNT, IOT, and
+MOBILE), will become [Solana SPL](https://spl.solana.com/token) tokens.
 
-If an exchange already supports [Solana SPL](https://spl.solana.com/token) tokens, follow the steps
-below.
+If an exchange already supports SPL tokens, follow the steps below.
 
 :::tip SPL token Support
 
