--- a/docs/blockchain/helium-tokens/HNT.mdx
+++ b/docs/blockchain/helium-tokens/HNT.mdx
@@ -1,11 +1,11 @@
 ---
-id: helium-token
-title: The Helium Token
-pagination_label: The Helium Token
-sidebar_label: The Helium Token
-description: The Helium Token
+id: HNT
+title: HNT
+pagination_label: HNT
+sidebar_label: HNT
+description: HNT
 image: https://i.imgur.com/bWAbESE.png
-slug: /blockchain/helium-token
+slug: /blockchain/helium-tokens/HNT
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
