--- a/docs/lorawan-on-helium/lorawan-on-helium.mdx
+++ b/docs/lorawan-on-helium/lorawan-on-helium.mdx
@@ -46,6 +46,9 @@ A device defined by (AppEui, DevEui) can be allocated any of the DevAddrs owned 
 even possible to multiplex many devices on the same DevAddr at the same time, using the Message
 Integrity Check (MIC) to disambiguate.
 
+As of 2023, Helium will be utilizing an Open LNS Initiative to allow more choice and increase usability.
+You can read more about the Open LNS Initiative at the [Helium Foundation Blog]https://medium.com/helium-foundation/scaling-iot-growth-with-heliums-open-lns-initiative-c906e6953d6d) or read more [here] (insert docs link).
+
 :::info
 
 Based on latest benchmarking tests the upper limit for a Devaddr `1024` slab is approximately 5800
