--- a/docs/hotspot-makers/hotspot-audit-process.mdx
+++ b/docs/hotspot-makers/hotspot-audit-process.mdx
@@ -19,7 +19,7 @@ Audits.
 
 :::caution
 
-The [Manufacturing Compliance Committee](/hotspot-makers/compliance-committee) is only currnetly
+The [Manufacturing Compliance Committee](/hotspot-makers/compliance-committee) ("MCC") is only currnetly
 accepting Light Hotspots and 5G Hotspots for audit at this time.
 
 :::
@@ -160,7 +160,7 @@ A Maker App must be created and tested to continue with the hardware audit.
 2. Show the secure boot hardware via a diagram.
    - The diagrams should include all the hardware involved in the boot process and the security
      boundaries of each component.
-3. Hardware items to illustrate include (but aren’t limited to):
+3. Hardware items to illustrate include (but are not limited to):
    - Cryptographic hardware accelerator
    - Secure storage for private/secret and public keys
    - Secure RAM
