--- a/docs/hotspot-makers/hotspot-audit-process.mdx
+++ b/docs/hotspot-makers/hotspot-audit-process.mdx
@@ -19,8 +19,8 @@ Audits.
 
 :::caution
 
-The [Manufacturing Compliance Committee](/hotspot-makers/compliance-committee) ("MCC") is only currnetly
-accepting Light Hotspots and 5G Hotspots for audit at this time.
+The [Manufacturing Compliance Committee](/hotspot-makers/compliance-committee) ("MCC") is only
+currently accepting Light Hotspots and 5G Hotspots for audit at this time.
 
 :::
 
