formatting and frontmatter

--- a/docs/solana/migration/application-builder.mdx
+++ b/docs/solana/migration/application-builder.mdx
@@ -1,8 +1,8 @@
 ---
 id: application-builder
-title: Application Builder Migration
-pagination_label: Application Builder Migration
-sidebar_label: Application Builder Migration
+title: Application Builder Migration Guide
+pagination_label: Application Builder
+sidebar_label: Application Builder
 description: Helium Application Builder Migration Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration/application-builder
