--- a/docs/solana/migration/governance.mdx
+++ b/docs/solana/migration/governance.mdx
@@ -1,8 +1,8 @@
 ---
 id: governance
-title: Governance Migration
-pagination_label: Governance Migration
-sidebar_label: Governance Migration
+title: Governance Migration Guide
+pagination_label: Governance
+sidebar_label: Governance
 description: Helium Governance Migration Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration/governance
@@ -25,6 +25,8 @@ Using the Helium Wallet App, users will use an embedded browser to visit
 [helium.vote](https://helium.vote), connect a wallet, and vote yes/no on proposals. Ledger users, or
 users of any other Solana wallet, can also navigate to [helium.vote](https://helium.vote), connect a
 wallet, and vote.
+
+---
 
 ## Governance Changes
 
