--- a/docs/solana/migration/hotspot-maker.mdx
+++ b/docs/solana/migration/hotspot-maker.mdx
@@ -88,15 +88,14 @@ module.exports = (api) => {
 Apps must now be wrapped in a `<SolanaProvider>` and the `baseUrl` for `<OnboardingProvider>` has
 changed
 
-A Solana Provider must be set with a Solana RPC. Because Helium makes use of Compressed NFTs, there are
-currently 3 RPC providers with support:
-  
-  * [GenesysGo](https://genesysgo.com/)
-  * [Helius](https://helius.xyz/)
-  * [Triton](https://triton.one)
+A Solana Provider must be set with a Solana RPC. Because Helium makes use of Compressed NFTs, there
+are currently 3 RPC providers with support:
+
+- [GenesysGo](https://genesysgo.com/)
+- [Helius](https://helius.xyz/)
+- [Triton](https://triton.one)
 
 You can visit their websites and get set up with an RPC url.
-
 
 ```tsx
 // src/App.tsx
