--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -1,9 +1,9 @@
 ---
 id: ledger
-title: Ledger Migration
-pagination_label: Ledger Migration
-sidebar_label: Ledger Migration
-description: Helium Ledger Migration Documentation
+title: Ledger Wallet Migration Guide
+pagination_label: Ledger Wallet
+sidebar_label: Ledger Wallet
+description: Helium Ledger Wallet Migration Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration/ledger
 ---
@@ -34,6 +34,8 @@ Then migrate the wallet using
 ```bash
 $
 ```
+
+---
 
 ## Derivation Paths and your new Public Key
 
