--- a/docs/solana/migration/network-user.mdx
+++ b/docs/solana/migration/network-user.mdx
@@ -1,8 +1,8 @@
 ---
 id: network-user
-title: Network User Migration
-pagination_label: Network User Migration
-sidebar_label: Network User Migration
+title: Network User Migration Guide
+pagination_label: Network User
+sidebar_label: Network User
 description: Helium Network User Migration Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration/network-user
