--- a/docs/solana/migration/blockchain-node.mdx
+++ b/docs/solana/migration/blockchain-node.mdx
@@ -1,9 +1,9 @@
 ---
 id: blockchain-node
-title: Blockchain Node
+title: Blockchain Node Migration Guide
 pagination_label: Blockchain Node
 sidebar_label: Blockchain Node
-description: Helium Blockchain Node Documentation
+description: Helium Blockchain Node Migration Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration/blockchain-node
 ---
@@ -18,8 +18,9 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 ## Migrating wallet to Solana
 
-As of version [1.1.88](https://github.com/helium/blockchain-node/releases/tag/1.1.88) users can test the migration of their `blockchain-node` wallet to a Solana
-Paper Compatible Wallet. Follow the below instructions to migrate your wallet on testnet.
+As of version [1.1.88](https://github.com/helium/blockchain-node/releases/tag/1.1.88) users can test
+the migration of their `blockchain-node` wallet to a Solana Paper Compatible Wallet. Follow the
+below instructions to migrate your wallet on testnet.
 
 **Note**: Each wallet can only be migrated once.<br /> **Note**: Testnet is using a snapshot from
 January 31st. Due to this testnet and mainnet balances may not match.
